# Parallel-Screensaver

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_omp.cpp
docs/: Diagrama de Flujo.drawio
